# EchoDVC

./: README.md  justfile
.cargo/: config.toml
echo_dvc_plugin/: Cargo.toml
echo_dvc_plugin/src/: class_factory.rs  echo_plugin.rs  lib.rs  logs.rs  registry.rs
echo_dvc_server/: Cargo.toml
echo_dvc_server/src/: io_dvc.rs  main.rs
