[package]
name = "echo_dvc_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
simplelog = "0.12.2"
windows = { version = "0.61.3", features = ["Win32_System_Com", "Win32_System_Console", "Win32_System_Ole", "Win32_System_RemoteDesktop"] }
windows-core = "0.61.2"
winreg = "0.55.0"

[lib]
crate-type = ["cdylib"]
